# MIMICS

./: .gitignore  README.md
Analysis/: README.md
G4Sim/: README.md
G4Sim/SPECT/: CMakeLists.txt  init_vis.mac  run.cc  run.mac  vis.mac
G4Sim/SPECT/include/: DetectorConstruction.hh  DetectorMessenger.hh  RunAction.hh  TargetSD.hh
G4Sim/SPECT/macros/: init_vis.mac  run.mac  run_co57.mac  run_lu177.mac  test_co57.mac  test_lu177.mac
G4Sim/SPECT/src/: DetectorConstruction.cc  DetectorMessenger.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc
PySim/DetectorPhysics/: ElectronDrift.py
SPECT/: CMakeLists.txt  run.cc  vis.mac
SPECT/include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  TargetSD.hh
SPECT/src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  TargetSD.cc
